LIBDRUM-655. Added "umd-environment-banner" component
Added environment banner component that is controlled by
configuration/environment variables.

Updated the "README-DRUM.md" file to modify the "config/config.dev.yml"
file creation to include the environment banner.

https://issues.umd.edu/browse/LIBDRUM-655

--- a/src/themes/drum/app/header/header.component.html
+++ b/src/themes/drum/app/header/header.component.html
@@ -1,3 +1,4 @@
+<ds-umd-environment-banner></ds-umd-environment-banner>
 <header class="header">
   <nav role="navigation" [attr.aria-label]="'nav.user.description' | translate" class="container navbar navbar-expand-md px-0">
     <div class="d-flex flex-grow-1">
