LIBDRUM-653.Fixed the login form separator logic.
Only show if the login form about to be rendered as not the first one.

https://issues.umd.edu/browse/LIBDRUM-653

--- a/src/app/shared/log-in/log-in.component.html
+++ b/src/app/shared/log-in/log-in.component.html
@@ -1,7 +1,7 @@
 <ds-loading *ngIf="(loading | async) || (isAuthenticated | async)" class="m-5"></ds-loading>
 <div *ngIf="!(loading | async) && !(isAuthenticated | async)" class="px-4 py-3 login-container">
   <ng-container *ngFor="let authMethod of (authMethods | async); let i = index">
-    <div *ngIf="i === 1" class="text-center mt-2">
+    <div *ngIf="i > 1" class="text-center mt-2">
       <span class="align-middle">{{"login.form.or-divider" | translate}}</span>
     </div>
     <ds-log-in-container [authMethod]="authMethod" [isStandalonePage]="isStandalonePage"></ds-log-in-container>
