--- a/src/themes/drum/app/header/header.component.html
+++ b/src/themes/drum/app/header/header.component.html
@@ -1,3 +1,4 @@
+<ds-umd-header></ds-umd-header>
 <ds-umd-environment-banner></ds-umd-environment-banner>
 <header class="header">
   <nav role="navigation" [attr.aria-label]="'nav.user.description' | translate" class="container navbar navbar-expand-md px-0">
