LIBDRUM-697. Added "Web Accessibility" and "Give Now" links to footer
Added links for "Web Accessibility" and "Give Now" (with I18n text) to
the bottom footer.

https://issues.umd.edu/browse/LIBDRUM-697

--- a/src/themes/drum/app/footer/footer.component.html
+++ b/src/themes/drum/app/footer/footer.component.html
@@ -51,11 +51,19 @@
         </li>
         <li>
           <a class="text-white"
+            href="https://www.umd.edu/web-accessibility">{{ 'footer.link.umd-web-accessibility' | translate}}</a>
+        </li>
+        <li>
+          <a class="text-white"
              routerLink="info/end-user-agreement">{{ 'footer.link.end-user-agreement' | translate}}</a>
         </li>
         <li>
           <a class="text-white"
              routerLink="info/feedback">{{ 'footer.link.feedback' | translate}}</a>
+        </li>
+        <li>
+          <a class="text-white"
+            href="https://giving.umd.edu/giving/showSchool.php?name=libraries">{{ 'footer.link.umd-give-now' | translate}}</a>
         </li>
       </ul>
     </div>
