LIBDRUM-697. Fixed address in footer
Changed address from "University Libraries" (from PACT footer) to
"University of Maryland".

https://issues.umd.edu/browse/LIBDRUM-697

--- a/src/themes/drum/app/footer/footer.component.html
+++ b/src/themes/drum/app/footer/footer.component.html
@@ -19,7 +19,7 @@
         <div class="col-md-6 col-sm-12 mb-4 mb-md-0">
           <div class="top-footer-address">
             <strong>DRUM</strong><br>
-            <span>University Libraries, College Park, MD 20742-7011 </span><br>
+            <span>University of Maryland, College Park, MD 20742-7011</span><br>
             <a href="tel:+3013141328">(301) 314-1328</a><br />
           </div>
         </div>
