LIBDRUM-669. Display matched/unmatched Units based on LDAP criteria
Building on the work done in LIBDRUM-660, modified the
"UM Directory Information" section of "Edit EPerson" to display
"matched" and "unmatched" Units an EPerson belongs to, based
on their LDAP criteria.

The following classes anticipate the "unit" front-end work being done
in LIBDRUM-676:

* src/app/core/eperson/models/unit.model.ts
* src/app/core/eperson/models/unit.resource-type.ts

https://issues.umd.edu/browse/LIBDRUM-669

--- a/src/app/access-control/epeople-registry/eperson-form/eperson-form.component.html
+++ b/src/app/access-control/epeople-registry/eperson-form/eperson-form.component.html
@@ -82,7 +82,7 @@
     </div>
   </div>
 
-  <!-- UMD Customization for LIBDRUM-660 --->
+  <!-- UMD Customization for LIBDRUM-660/LIBDRUM-669 --->
   <ng-container *ngVar="(ldap | async) as ldapRD">
     <div *ngIf="ldapRD.hasSucceeded && !ldapRD.hasNoContent">
       <h3>{{ messagePrefix + '.ldap.title' | translate }}</h3>
@@ -107,9 +107,25 @@
             </li>
           </ul>
         </div>
+        <div *ngIf="ldapRD.payload.matchedUnits.length > 0">
+          <li>{{ messagePrefix + '.ldap.matchedUnits' | translate }}</li>
+          <ul>
+            <li *ngFor="let unit of ldapRD.payload.matchedUnits">
+              {{ unit.name }}
+            </li>
+          </ul>
+        </div>
+        <div *ngIf="ldapRD.payload.unmatchedUnits.length > 0">
+          <li>{{ messagePrefix + '.ldap.unmatchedUnits' | translate }}</li>
+          <ul>
+            <li *ngFor="let unmatchedUnit of ldapRD.payload.unmatchedUnits">
+              {{ unmatchedUnit }}
+            </li>
+          </ul>
+        </div>
       </ul>
     </div>
   </ng-container>
-  <!-- End UMD Customization for LIBDRUM-660 -->
+  <!-- End UMD Customization for LIBDRUM-660/LIBDRUM-669 -->
 
 </div>
