--- a/src/themes/drum/app/home-page/home-page.component.html
+++ b/src/themes/drum/app/home-page/home-page.component.html
@@ -7,9 +7,9 @@
   </ds-search-form>
   <h2>{{ 'communityList.title' | translate }}</h2>
   <h3>{{ 'community.group.faculty.title' | translate }}</h3>
-  <ds-cg-community-list [communityGroupId]="FACULTY_COMMUNITY_GROUP">
+  <ds-cg-community-list [communityGroupId]="FACULTY_COMMUNITY_GROUP" [size]="COMMUNITY_LIST_SIZE">
   </ds-cg-community-list>
   <h3>{{ 'community.group.um.title' | translate }}</h3>
-  <ds-cg-community-list [communityGroupId]="UM_COMMUNITY_GROUP">
+  <ds-cg-community-list [communityGroupId]="UM_COMMUNITY_GROUP" [size]="COMMUNITY_LIST_SIZE">
   </ds-cg-community-list>
 </div>
