LIBDRUM-702. Change "Show more" behavior.
- The "show more" button only loads the next page of items with page size being the initial configured list size. When the page size is set to low value such as '5', we need to go through multiple loads to get all the communities. Changed "show more" button behavior to load max allowed communities per page instead of the initial list size.
- Also, changed the default list size to 40.

https://issues.umd.edu/browse/LIBDRUM-702

--- a/src/themes/drum/app/community-list-page/community-list/community-list.component.html
+++ b/src/themes/drum/app/community-list-page/community-list/community-list.component.html
@@ -8,7 +8,8 @@
         <span class="fa fa-chevron-right invisible" aria-hidden="true"></span>
       </button>
       <div class="align-middle pt-2">
-        <a *ngIf="node!==loadingNode" (click)="getNextPage(node)" class="btn btn-outline-primary btn-sm" role="button">
+        <a *ngIf="node!==loadingNode" (click)="getMaxAllowedCommunities(node)" class="btn btn-outline-primary btn-sm"
+          role="button">
           <i class="fas fa-angle-down"></i> {{ 'communityList.showMore' | translate }}
         </a>
         <ds-loading *ngIf="node===loadingNode && dataSource.loading$ | async" class="ds-loading"></ds-loading>
