--- a/src/themes/drum/app/community-list-page/community-list-page.component.html
+++ b/src/themes/drum/app/community-list-page/community-list-page.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <h2>{{ 'communityList.title' | translate }}</h2>
-  <h3>{{ 'community.group.faculty.title' | translate }}</h3>
+  <h3>{{ 'community_group.faculty.title' | translate }}</h3>
   <ds-cg-community-list [communityGroupId]="FACULTY_COMMUNITY_GROUP">
   </ds-cg-community-list>
-  <h3>{{ 'community.group.um.title' | translate }}</h3>
+  <h3>{{ 'community_group.um.title' | translate }}</h3>
   <ds-cg-community-list [communityGroupId]="UM_COMMUNITY_GROUP">
   </ds-cg-community-list>
 </div>
