--- a/src/themes/drum/app/home-page/home-page.component.html
+++ b/src/themes/drum/app/home-page/home-page.component.html
@@ -6,10 +6,10 @@
   <ds-search-form [inPlaceSearch]="false" [searchPlaceholder]="'home.search-form.placeholder' | translate">
   </ds-search-form>
   <h2>{{ 'communityList.title' | translate }}</h2>
-  <h3>{{ 'community.group.faculty.title' | translate }}</h3>
+  <h3>{{ 'community_group.faculty.title' | translate }}</h3>
   <ds-cg-community-list [communityGroupId]="FACULTY_COMMUNITY_GROUP" [size]="COMMUNITY_LIST_SIZE">
   </ds-cg-community-list>
-  <h3>{{ 'community.group.um.title' | translate }}</h3>
+  <h3>{{ 'community_group.um.title' | translate }}</h3>
   <ds-cg-community-list [communityGroupId]="UM_COMMUNITY_GROUP" [size]="COMMUNITY_LIST_SIZE">
   </ds-cg-community-list>
 </div>
