--- a/src/app/access-control/unit-registry/units-registry.component.html
+++ b/src/app/access-control/unit-registry/units-registry.component.html
@@ -48,8 +48,7 @@
             <tr>
               <th scope="col">{{messagePrefix + 'table.id' | translate}}</th>
               <th scope="col">{{messagePrefix + 'table.name' | translate}}</th>
-<!--              <th scope="col">{{messagePrefix + 'table.collectionOrCommunity' | translate}}</th> -->
-<!--              <th scope="col">{{messagePrefix + 'table.members' | translate}}</th> -->
+              <th scope="col">{{messagePrefix + 'table.members' | translate}}</th>
               <th>{{messagePrefix + 'table.edit' | translate}}</th>
             </tr>
             </thead>
@@ -57,8 +56,7 @@
             <tr *ngFor="let unitDto of (unitsDto$ | async)?.page">
               <td>{{unitDto.unit.id}}</td>
               <td>{{unitDto.unit.name}}</td>
-<!--              <td>{{(groupDto.group.object | async)?.payload?.name}}</td>
-              <td>{{groupDto.epersons?.totalElements + groupDto.subgroups?.totalElements}}</td> -->
+              <td>{{unitDto.groups?.totalElements}}</td>
               <td>
                 <div class="btn-group edit-field">
                   <ng-container [ngSwitch]="unitDto.ableToEdit">
