LIBDRUM-703. Link LDAP-based Units to Unit page
Updated the "UM Directory Information" section of the EPerson edit form
to link to existing Units derived from a user's LDAP criteria.

https://issues.umd.edu/browse/LIBDRUM-703

--- a/src/app/access-control/epeople-registry/eperson-form/eperson-form.component.html
+++ b/src/app/access-control/epeople-registry/eperson-form/eperson-form.component.html
@@ -111,7 +111,7 @@
           <li>{{ messagePrefix + '.ldap.matchedUnits' | translate }}</li>
           <ul>
             <li *ngFor="let unit of ldapRD.payload.matchedUnits">
-              {{ unit.name }}
+              <a [routerLink]="[unitDataService.getUnitEditPageRouterLink(unit)]">{{ unit.name }}</a>
             </li>
           </ul>
         </div>
