LIBDRUM-704. Added "Recent Submissions" section to DRUM home page
Modified the "home-page" component for the "drum" theme to display
a "Recent Submissions" section.

https://issues.umd.edu/browse/LIBDRUM-704

--- a/src/themes/drum/app/home-page/home-page.component.html
+++ b/src/themes/drum/app/home-page/home-page.component.html
@@ -12,4 +12,5 @@
   <h3>{{ 'community_group.um.title' | translate }}</h3>
   <ds-cg-community-list [communityGroupId]="UM_COMMUNITY_GROUP" [size]="COMMUNITY_LIST_SIZE">
   </ds-cg-community-list>
+  <ds-recent-item-list *ngIf="recentSubmissionspageSize>0"></ds-recent-item-list>
 </div>
