LIBDRUM-679. Implementation of Embargo List CSV Export button
Added an "Export embargo list as CSV" button, which calls the
"embargo-list-export" script.

Modeled on the "src/app/shared/search/search-export-csv/"
functionality.

https://issues.umd.edu/browse/LIBDRUM-679

--- a/src/app/embargo-list/embargo-list.component.html
+++ b/src/app/embargo-list/embargo-list.component.html
@@ -1,3 +1,6 @@
 <div class="container">
-  <h2>{{ 'embargo-list.title' | translate }}</h2>
+  <div class="d-flex justify-content-between">
+    <h2>{{ 'embargo-list.title' | translate }}</h2>
+    <ds-embargo-list-export-csv></ds-embargo-list-export-csv>
+  </div>
 </div>
