--- a/src/app/embargo-list/embargo-list-page.component.html
+++ b/src/app/embargo-list/embargo-list-page.component.html
@@ -4,3 +4,9 @@
     <ds-embargo-list-export-csv></ds-embargo-list-export-csv>
   </div>
 </div>
+<div class="container" *ngIf="(embargoListResponseInitialised | async)">
+  <div *ngIf="(embargoListResponse | async)">
+    <ds-embargo-list [embargoListResponse]="(embargoListResponse | async)"></ds-embargo-list>
+  </div>
+  <ds-alert *ngIf="!(embargoListResponse | async)" [type]="'alert-danger'" [content]="'embargo-list.error.msg'"></ds-alert>
+</div>
