LIBDRUM-679. Modify embargo list to use I18n labels for table headers
https://issues.umd.edu/browse/LIBDRUM-679

--- a/src/app/embargo-list/embargo-list/embargo-list.component.html
+++ b/src/app/embargo-list/embargo-list/embargo-list.component.html
@@ -2,15 +2,15 @@
   <table class="table table-striped">
     <thead>
       <tr>
-        <th scope="col">Handle</th>
-        <th scope="col">Item ID</th>
-        <th scope="col">Bitstream ID</th>
-        <th scope="col">Title</th>
-        <th scope="col">Advisor</th>
-        <th scope="col">Author</th>
-        <th scope="col">Department</th>
-        <th scope="col">Type</th>
-        <th scope="col">End Date</th>
+        <th scope="col">{{ messagePrefix + '.handle' | translate }}</th>
+        <th scope="col">{{ messagePrefix + '.itemId' | translate }}</th>
+        <th scope="col">{{ messagePrefix + '.bitstreamId' | translate }}</th>
+        <th scope="col">{{ messagePrefix + '.title' | translate }}</th>
+        <th scope="col">{{ messagePrefix + '.advisor' | translate }}</th>
+        <th scope="col">{{ messagePrefix + '.author' | translate }}</th>
+        <th scope="col">{{ messagePrefix + '.department' | translate }}</th>
+        <th scope="col">{{ messagePrefix + '.type' | translate }}</th>
+        <th scope="col">{{ messagePrefix + '.endDate' | translate }}</th>
       </tr>
     </thead>
     <tbody>
