LIBDRUM-671. Fix to handle creation of new ETD department
Modified "etdunit-form.component.html" to suppress display of the
Collection membership and search form when a new ETD Department is
being created.

Modified "etdunit-form.component.ts" to fix a spurious request to the
DSpace backend for an ETD department named "newEtdUnit" or "undefined"
when creating a new ETD department. Note: The "Units" functionality
exhibits the same behavior, so we might want to think about making
a similar change to that code as well.

https://umd-dit.atlassian.net/browse/LIBDRUM-671

--- a/src/app/etdunit-registry/etdunit-form/etdunit-form.component.html
+++ b/src/app/etdunit-registry/etdunit-form/etdunit-form.component.html
@@ -24,35 +24,37 @@
           </button>
         </div>
       </ds-form>
-      <h3 class="border-bottom pb-2">{{ 'admin.core.etdunits.form.collection-mapper.mapped-collections.head' |
-        translate}}</h3>
-      <div>
-        <ds-collection-select class="mt-2" [key]="'browse'" [dsoRD$]="etdunitCollectionsRD$"
-          [paginationOptions]="(searchOptions$ | async)?.pagination"
-          [confirmButton]="'admin.core.etdunits.form.collection-mapper.buttons.remove'"
-          [cancelButton]="'admin.core.etdunits.form.collection-mapper.cancel'" [dangerConfirm]="true"
-          (confirm)="removeMappings($event)" (cancel)="onCancel()"></ds-collection-select>
-      </div>
-      <br />
-      <h3 class="border-bottom pt-2 pb-2">{{ 'admin.core.etdunits.form.collection-mapper.head' | translate}}</h3>
-      <div class="row mt-2">
-        <div class="col-12 col-lg-6">
-          <ds-search-form id="search-form" [query]="(searchOptions$ | async)?.query" [currentUrl]="'./'"
-            [inPlaceSearch]="true"
-            [searchPlaceholder]="'admin.core.etdunits.form.collection-mapper.search-form.placeholder' | translate"
-            (submitSearch)="performedSearch = true">
-          </ds-search-form>
+
+      <div *ngIf="etdunitBeingEdited != null">
+        <h3 class="border-bottom pb-2">{{ 'admin.core.etdunits.form.collection-mapper.mapped-collections.head' | translate}}</h3>
+        <div>
+          <ds-collection-select class="mt-2" [key]="'browse'" [dsoRD$]="etdunitCollectionsRD$"
+            [paginationOptions]="(searchOptions$ | async)?.pagination"
+            [confirmButton]="'admin.core.etdunits.form.collection-mapper.buttons.remove'"
+            [cancelButton]="'admin.core.etdunits.form.collection-mapper.cancel'" [dangerConfirm]="true"
+            (confirm)="removeMappings($event)" (cancel)="onCancel()"></ds-collection-select>
         </div>
-      </div>
-      <div *ngIf="performedSearch">
-        <ds-collection-select class="mt-2" [key]="'map'" [dsoRD$]="mappableCollectionsRD$"
-          [paginationOptions]="(searchOptions$ | async)?.pagination" [sortOptions]="(searchOptions$ | async)?.sort"
-          [confirmButton]="'admin.core.etdunits.form.collection-mapper.buttons.add'"
-          [cancelButton]="'admin.core.etdunits.form.collection-mapper.cancel'" (confirm)="mapCollections($event)"
-          (cancel)="onCancel()"></ds-collection-select>
-      </div>
-      <div *ngIf="!performedSearch" class="alert alert-info w-100" role="alert">
-        {{'admin.core.etdunits.form.collection-mapper.no-search' | translate}}
+        <br />
+        <h3 class="border-bottom pt-2 pb-2">{{ 'admin.core.etdunits.form.collection-mapper.head' | translate}}</h3>
+        <div class="row mt-2">
+          <div class="col-12 col-lg-6">
+            <ds-search-form id="search-form" [query]="(searchOptions$ | async)?.query" [currentUrl]="'./'"
+              [inPlaceSearch]="true"
+              [searchPlaceholder]="'admin.core.etdunits.form.collection-mapper.search-form.placeholder' | translate"
+              (submitSearch)="performedSearch = true">
+            </ds-search-form>
+          </div>
+        </div>
+        <div *ngIf="performedSearch">
+          <ds-collection-select class="mt-2" [key]="'map'" [dsoRD$]="mappableCollectionsRD$"
+            [paginationOptions]="(searchOptions$ | async)?.pagination" [sortOptions]="(searchOptions$ | async)?.sort"
+            [confirmButton]="'admin.core.etdunits.form.collection-mapper.buttons.add'"
+            [cancelButton]="'admin.core.etdunits.form.collection-mapper.cancel'" (confirm)="mapCollections($event)"
+            (cancel)="onCancel()"></ds-collection-select>
+        </div>
+        <div *ngIf="!performedSearch" class="alert alert-info w-100" role="alert">
+          {{'admin.core.etdunits.form.collection-mapper.no-search' | translate}}
+        </div>
       </div>
     </div>
   </div>
