LIBDRUM-678. Added "restricted-access" module and page
Added a "restricted-access" module that shows the "Restricted Access"
page when a bitstream is embargoed, or otherwise not downloadable by
the user (such as due to a "Campus" IP restriction, and the user is
off-campus).

Displays a "(RESTRICTED ACCESS)" text marker below the download link
whenever the bitstream has an active embargo (shown for all users, even
if the user can actually download the bitstream).

The "Restricted Access" page show differing text based on whether the
file has a time-limited embargo, a forever embargo, the user is logged
in, or if there is some other (non-embargo) restriction.

https://umd-dit.atlassian.net/browse/LIBDRUM-678

--- a/src/app/shared/file-download-link/file-download-link.component.html
+++ b/src/app/shared/file-download-link/file-download-link.component.html
@@ -6,3 +6,11 @@
 <ng-template #content>
   <ng-content></ng-content>
 </ng-template>
+
+<!-- UMD Customization -->
+<ng-template [ngIf]="(isEmbargoed$ |async)">
+  <br>
+  {{'bitstream.embargoed.text' | translate }}
+  <br>
+</ng-template>
+<!-- End UMD Customization -->
