--- a/src/themes/drum/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/themes/drum/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -8,9 +8,11 @@
   </div>
 </div>
 <div class="d-flex flex-row">
+  <!-- Title -->
   <h2 class="item-page-title-field mr-auto">
     <ds-metadata-values [mdValues]="object?.allMetadata(['dc.title'])"></ds-metadata-values>
   </h2>
+
   <div class="pl-2">
     <ds-dso-page-version-button (newVersionEvent)="onCreateNewVersion()" [dso]="object"
                                 [tooltipMsgCreate]="'item.page.version.create'"
@@ -20,6 +22,9 @@
 </div>
 <div class="row">
   <div class="col-xs-12 col-md-4">
+    <!-- Left column -->
+
+    <!-- Files -->
     <ng-container *ngIf="!mediaViewer.image">
       <ds-metadata-field-wrapper [hideIfNoTextContent]="false">
         <ds-thumbnail [thumbnail]="object?.thumbnail | async"></ds-thumbnail>
@@ -29,13 +34,18 @@
       <ds-media-viewer [item]="object" [videoOptions]="mediaViewer.video"></ds-media-viewer>
     </ng-container>
     <ds-themed-item-page-file-section [item]="object"></ds-themed-item-page-file-section>
+
+    <!-- Date -->
     <ds-item-page-date-field [item]="object"></ds-item-page-date-field>
+
+    <!-- Authors -->
     <ds-metadata-representation-list class="ds-item-page-mixed-author-field"
       [parentItem]="object"
       [itemType]="'Person'"
       [metadataFields]="['dc.contributor.author', 'dc.creator']"
       [label]="'relationships.isAuthorOf' | translate">
     </ds-metadata-representation-list>
+
     <ds-generic-item-page-field [item]="object"
       [fields]="['journal.title']"
       [label]="'item.page.journal-title'">
@@ -48,17 +58,24 @@
       [fields]="['journalvolume.identifier.name']"
       [label]="'item.page.volume-title'">
     </ds-generic-item-page-field>
+
+    <!-- Advisor -->
     <ds-generic-item-page-field [item]="object"
       [fields]="['dc.contributor.advisor']"
       [label]="'item.page.advisor'">
     </ds-generic-item-page-field>
+
+    <!-- Citation -->
     <ds-generic-item-page-field [item]="object"
       [fields]="['dc.identifier.citation']"
       [label]="'item.page.citation'">
     </ds-generic-item-page-field>
+
+    <!-- DRUM DOI -->
     <ds-item-page-uri-field [item]="object"
       [fields]="['dc.identifier']"
       [label]="'item.page.doi'">
+
     </ds-item-page-uri-field>
     <ds-generic-item-page-field [item]="object"
       [fields]="['dc.publisher']"
@@ -66,7 +83,12 @@
     </ds-generic-item-page-field>
   </div>
   <div class="col-xs-12 col-md-6">
+    <!-- Right column -->
+
+    <!-- Abstract -->
     <ds-item-page-abstract-field [item]="object"></ds-item-page-abstract-field>
+
+    <!-- Notes -->
     <ds-generic-item-page-field [item]="object"
       [fields]="['dc.description']"
       [label]="'item.page.description'">
@@ -77,11 +99,16 @@
       [separator]="','"
       [label]="'item.page.subject'">
     </ds-generic-item-page-field>
+
+    <!-- URI (handle) -->
     <ds-item-page-uri-field [item]="object"
       [fields]="['dc.identifier.uri']"
       [label]="'item.page.uri'">
     </ds-item-page-uri-field>
+
+    <!-- Collection -->
     <ds-item-page-collections [item]="object"></ds-item-page-collections>
+
     <div>
       <a class="btn btn-outline-primary" [routerLink]="[itemPageRoute + '/full']" role="button">
         <i class="fas fa-info-circle"></i> {{"item.page.link.full" | translate}}
