LIBDRUM-740. Added "Publication or External Link" and "Rights" fields
Added fields for "dc.description.uri" (Publication or External Link) and
"dc.rights"/"dc.rights.uri" (Rights), with appropriate default I18n text
for the labels.

https://umd-dit.atlassian.net/browse/LIBDRUM-740

--- a/src/themes/drum/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/themes/drum/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -35,6 +35,12 @@
     </ng-container>
     <ds-themed-item-page-file-section [item]="object"></ds-themed-item-page-file-section>
 
+    <!-- Publication or External Link -->
+    <ds-item-page-uri-field [item]="object"
+      [fields]="['dc.description.uri']"
+      [label]="'item.page.publicationlink'">
+    </ds-item-page-uri-field>
+
     <!-- Date -->
     <ds-item-page-date-field [item]="object"></ds-item-page-date-field>
 
@@ -81,6 +87,12 @@
       [fields]="['dc.identifier.uri']"
       [label]="'item.page.uri'">
     </ds-item-page-uri-field>
+
+    <!-- Rights -->
+    <ds-generic-item-page-field [item]="object"
+      [fields]="['dc.rights', 'dc.rights.uri']"
+      [label]="'item.page.rights'">
+    </ds-generic-item-page-field>
 
     <!-- Collection -->
     <ds-item-page-collections [item]="object"></ds-item-page-collections>
