LIBDRUM-740. Type-based labels for "Publication Link" and "Citation"
Added code to show different labels for "Publication Link"
(dc.description.uri) and "Citation" (dc.identifier.uri) based on whether
the item was of type "Dataset"/"Software" or some other type.

These label changes are related to similar label changes in the
"dspace/config/submission-forms.xml" in the DSpace back-end code.

https://umd-dit.atlassian.net/browse/LIBDRUM-740

--- a/src/themes/drum/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
+++ b/src/themes/drum/app/item-page/simple/item-types/untyped-item/untyped-item.component.html
@@ -38,7 +38,7 @@
     <!-- Publication or External Link -->
     <ds-item-page-uri-field [item]="object"
       [fields]="['dc.description.uri']"
-      [label]="'item.page.publicationlink'">
+      [label]="publicationLinkLabelI18nKey">
     </ds-item-page-uri-field>
 
     <!-- Date -->
@@ -61,7 +61,7 @@
     <!-- Citation -->
     <ds-generic-item-page-field [item]="object"
       [fields]="['dc.identifier.citation']"
-      [label]="'item.page.citation'">
+      [label]="citationLabelI18nKey">
     </ds-generic-item-page-field>
 
     <!-- DRUM DOI -->
