LIBDRUM-745. Updated DRUM footer
Modified the “src/themes/drum/app/footer/footer.component.html” file,
keeping the “top” and “bottom” footer structure, but removing the
DSpace copyright and Lyrasis link.

Reordered the row of links in the bottom footer to
“Send Feedback | Privacy policy | Web Accessibility | Give Now | Cookie settings”
and removed the “text-white” class, so that the text color would match
the top footer.

Modified the “src/themes/drum/app/footer/footer.component.scss” file,
changing the “background-color” for the “footer” class
(the bottom footer) to use the same SCSS variable as the top footer,
so that the background colors would match.

Considered merging the “top” and “bottom” footer sections together to be
a single footer, but DSpace seems geared to have both sections, and the
CSS styling is different enough that it did not seem to be worth the
effort, especially if we want to make changes in the future (or keep up
with any DSpace upstream changes).

https://umd-dit.atlassian.net/browse/LIBDRUM-745

--- a/src/themes/drum/app/footer/footer.component.html
+++ b/src/themes/drum/app/footer/footer.component.html
@@ -30,39 +30,26 @@
   </div>
   <!-- Grid container -->
 
-  <!-- Copyright -->
-  <div class="bottom-footer p-1 d-flex justify-content-center align-items-center text-white">
+  <div class="bottom-footer p-1 d-flex justify-content-center align-items-center">
     <div class="content-container">
-      <p class="m-0">
-        <a class="text-white"
-           href="http://www.dspace.org/">{{ 'footer.link.dspace' | translate}}</a>
-        {{ 'footer.copyright' | translate:{year: dateObj | date:'y'} }}
-        <a class="text-white"
-           href="https://www.lyrasis.org/">{{ 'footer.link.lyrasis' | translate}}</a>
-      </p>
       <ul class="footer-info list-unstyled small d-flex justify-content-center mb-0">
         <li>
-          <a class="text-white" href="javascript:void(0);"
+          <a routerLink="info/feedback">{{ 'footer.link.feedback' | translate}}</a>
+        </li>
+        <li>
+          <a routerLink="info/privacy">{{ 'footer.link.privacy-policy' | translate}}</a>
+        </li>
+        <li>
+          <a href="https://www.umd.edu/web-accessibility">{{ 'footer.link.umd-web-accessibility' | translate}}</a>
+        </li>
+        <li>
+          <a href="https://giving.umd.edu/giving/showSchool.php?name=libraries">{{ 'footer.link.umd-give-now' | translate}}</a>
+        </li>
+        <li>
+          <a href="javascript:void(0);"
              (click)="showCookieSettings()">{{ 'footer.link.cookies' | translate}}</a>
-        </li>
-        <li>
-          <a class="text-white"
-             routerLink="info/privacy">{{ 'footer.link.privacy-policy' | translate}}</a>
-        </li>
-        <li>
-          <a class="text-white"
-            href="https://www.umd.edu/web-accessibility">{{ 'footer.link.umd-web-accessibility' | translate}}</a>
-        </li>
-        <li>
-          <a class="text-white"
-             routerLink="info/feedback">{{ 'footer.link.feedback' | translate}}</a>
-        </li>
-        <li>
-          <a class="text-white"
-            href="https://giving.umd.edu/giving/showSchool.php?name=libraries">{{ 'footer.link.umd-give-now' | translate}}</a>
         </li>
       </ul>
     </div>
   </div>
-  <!-- Copyright -->
 </footer>
