--- a/src/themes/drum/app/footer/footer.component.scss
+++ b/src/themes/drum/app/footer/footer.component.scss
@@ -1,6 +1,6 @@
 :host {
   footer {
-    background-color: var(--ds-footer-bg);
+    background-color: var(--ds-top-footer-bg);
     text-align: center;
     z-index: var(--ds-footer-z-index);
     border-top: var(--ds-footer-border);
