LIBDRUM-744. Replaced "DRUM" acronym in footer with full name
Replaced "DRUM" acronym in footer with full name:

Digital Repository at the University of Maryland

Also added "drum-help@umd.edu" as a "mailto" hyperlink.

https://umd-dit.atlassian.net/browse/LIBDRUM-744

--- a/src/themes/drum/app/footer/footer.component.html
+++ b/src/themes/drum/app/footer/footer.component.html
@@ -18,9 +18,10 @@
         <!--Grid column-->
         <div class="col-md-6 col-sm-12 mb-4 mb-md-0">
           <div class="top-footer-address">
-            <strong>DRUM</strong><br>
+            <strong>Digital Repository at the University of Maryland</strong><br>
             <span>University of Maryland, College Park, MD 20742-7011</span><br>
             <a href="tel:+3013141328">(301) 314-1328</a><br />
+            <a href="mailto:drum-help@umd.edu">drum-help@umd.edu</a>
           </div>
         </div>
         <!--Grid column-->
