--- a/src/app/restricted-access/restricted-access.component.html
+++ b/src/app/restricted-access/restricted-access.component.html
@@ -4,5 +4,9 @@
   <p>
     {{restrictedAccessMessage | async }}
   </p>
-
+  <div class="pt-3">
+    <button (click)="back()" class="btn btn-outline-secondary">
+      <i class="fas fa-arrow-left"></i> {{'bitstream.download.page.back' | translate}}
+    </button>
+  </div>
 </div>
