LIBDRUM-761. Updated DRUM home page text and image
* Moved "HomeNewsComponent" into the "drum" theme
* Updated "hero image" text for DRUM
* Replaced background image
* Increased the font size of the text t in the “hero image” by 20%
* Changed the hyperlinks in the hero image text to “Maryland Gold”
  (#ffd200) from the the UMD palette (https://brand.umd.edu/colors )
* Change the bar between the navigation bar and the hero image to dark
  gray (#454545)

https://umd-dit.atlassian.net/browse/LIBDRUM-761

--- a/src/themes/drum/app/navbar/navbar.component.scss
+++ b/src/themes/drum/app/navbar/navbar.component.scss
@@ -1,6 +1,8 @@
 nav.navbar {
   border-top: 1px var(--ds-header-navbar-border-top-color) solid;
-  border-bottom: 5px var(--bs-green) solid;
+  // UMD Customization
+  border-bottom: 5px #454545 solid;
+  // End UMD Customization
   align-items: baseline;
   color: var(--ds-header-icon-color);
 }
