LIBDRUM-772. Replaced university/DRUM logos with new combined logo
Replaced the separate university and DRUM logos with a single combined
logo that links to the DRUM home page.

The "drum-logo.png" DRUM logo PNG image was replaced with an SVG image
"drum-logo.svg", and the "umd_informal_seal.gif" file was removed as
no longer necessary.

The SVG file from the issue was used, instead of the PNG image, because
it is significantly smaller. However, since SVG images are not correctly
sized by the "max-height" attribute (and would not be shown, as being
of zero height), the CSS files were modified to add a "height" attribute
to the "navbar.component.scss" file.

Also, because the DSpace default height of 50px was too small, changed
the "ds-header-logo-height" in "_theme_css_variable_overrides.scss" to
"70px".

The HTML elements for the logos in the "navbar.component.html" and
"header.component.html" were replaced with a single logo element.

Note: Is it unclear whether/how the image in "header.component.html"
is displayed, but it is present in the "dspace" theme version of the
file, and so was modified.

https://umd-dit.atlassian.net/browse/LIBDRUM-772

--- a/src/themes/drum/app/header/header.component.html
+++ b/src/themes/drum/app/header/header.component.html
@@ -4,15 +4,10 @@
 <header class="header">
   <nav role="navigation" [attr.aria-label]="'nav.user.description' | translate" class="container navbar navbar-expand-md px-0">
     <div class="d-flex flex-grow-1">
-      <a class="navbar-brand my-2" href="https://www.lib.umd.edu/">
-        <img src="assets/drum/images/umd_informal_seal.gif" [attr.alt]="'menu.header.organization.logo' | translate" />
+      <a class="navbar-brand my-2" routerLink="/home">
+        <img src="assets/drum/images/drum-logo.svg" [attr.alt]="'menu.header.image.logo' | translate" />
       </a>
-    </div>
-    <div class="d-flex flex-grow-1">
-        <a class="navbar-brand my-2" routerLink="/home">
-        <img src="assets/drum/images/drum-logo.png" [attr.alt]="'menu.header.image.logo' | translate" />
-      </a>
-    </div>
+      </div>
     <div class="d-flex flex-grow-1 ml-auto justify-content-end align-items-center">
       <ds-search-navbar class="navbar-search"></ds-search-navbar>
       <ds-lang-switch></ds-lang-switch>
