--- a/src/themes/drum/app/navbar/navbar.component.html
+++ b/src/themes/drum/app/navbar/navbar.component.html
@@ -1,11 +1,8 @@
 <nav [ngClass]="{'open': !(menuCollapsed | async)}" [@slideMobileNav]="!(windowService.isXsOrSm() | async) ? 'default' : ((menuCollapsed | async) ? 'collapsed' : 'expanded')"
   class="navbar navbar-expand-md navbar-light p-0 navbar-container" role="navigation" [attr.aria-label]="'nav.main.description' | translate">
   <div class="container h-100">
-    <a class="navbar-brand my-2" href="https://www.lib.umd.edu/">
-      <img src="assets/drum/images/umd_informal_seal.gif" [attr.alt]="'menu.header.organization.logo' | translate" />
-    </a>
     <a class="navbar-brand my-2" routerLink="/home">
-      <img src="assets/drum/images/drum-logo.png" [attr.alt]="'menu.header.image.logo' | translate" />
+      <img src="assets/drum/images/drum-logo.svg" [attr.alt]="'menu.header.image.logo' | translate" />
     </a>
 
     <div id="collapsingNav" class="w-100 h-100">
