--- a/src/themes/drum/styles/_theme_css_variable_overrides.scss
+++ b/src/themes/drum/styles/_theme_css_variable_overrides.scss
@@ -5,6 +5,7 @@
 
 // Customizations for "drum" theme
 :root {
+  --ds-header-logo-height: 70px;
   --ds-home-news-link-color: #ffd200; // "Maryland Gold", see https://brand.umd.edu/colors
   --ds-home-news-link-hover-color: #ffd200;
 }
