LIBDRUM-773. Updated "Equitable Access Policy" URL
Updated the URL for the "Equitable Access to Scholarly Articles
Authored by University Faculty" link, based on a March 30, 2023 email
from Terry Owen.

https://umd-dit.atlassian.net/browse/LIBDRUM-773

--- a/src/themes/drum/app/home-page/home-news/home-news.component.html
+++ b/src/themes/drum/app/home-page/home-news/home-news.component.html
@@ -18,7 +18,7 @@
       <ul>
         <li>
           Faculty may use DRUM to fulfill the
-          <a href="https://policies.umd.edu/research/university-of-maryland-policy-for-equitable-access-to-scholarly-articles-authored-by-university-faculty">
+          <a href="https://equitableaccess.umd.edu/">
             Equitable Access to Scholarly Articles Authored by University Faculty
           </a>
           policy, and in many cases may use it to fulfill open access requirements
