LIBDRUM-785. Added additional space between community list sublists
Added a little more space between the "Collections Organized by
Department" and "UM Community-managed Collections" sublists in the
"Communities" list, so that the "Show More" button of the first list
is not so close to the title of the second list.

https://umd-dit.atlassian.net/browse/LIBDRUM-785

--- a/src/themes/drum/app/home-page/home-page.component.html
+++ b/src/themes/drum/app/home-page/home-page.component.html
@@ -11,7 +11,7 @@
       <h3>{{ 'community_group.faculty.title' | translate }}</h3>
       <ds-cg-community-list [communityGroupId]="FACULTY_COMMUNITY_GROUP" [size]="COMMUNITY_LIST_SIZE">
       </ds-cg-community-list>
-      <h3>{{ 'community_group.um.title' | translate }}</h3>
+      <h3 class="mt-4">{{ 'community_group.um.title' | translate }}</h3>
       <ds-cg-community-list [communityGroupId]="UM_COMMUNITY_GROUP" [size]="COMMUNITY_LIST_SIZE">
       </ds-cg-community-list>
     </div>
